crates/talkbank-derive/tests/ui/fail_error_code_enum_missing_code_attr.rs
use talkbank_derive::error_code_enum;

#[error_code_enum]
enum MissingCodeAttr {
    #[code("E001")]
    SomeError,
    MissingAttr,
    #[code("E999")]
    UnknownError,
}

fn main() {}
